Add README, agent guide and upgrade plan